crates/oxc_react_compiler/tests/snapshots/dynamic-import.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/dynamic-import.js
---
import { c as _c } from "react/compiler-runtime";
const ConfirmationCodeInput = React.lazy(() => {
	const $ = _c(1);
	let t0;
	if ($[0] === Symbol.for("react.memo_cache_sentinel")) {
		t0 = import("ConfirmationCodeInput.react");
		$[0] = t0;
	} else {
		t0 = $[0];
	}
	return t0;
}) as React.ComponentType<React.ElementConfig<ConfirmationCodeInputType>>;
export const examples = [{ render(): React.MixedElement {
	return <ConfirmationCodeInput helperText={isCompleted && `Your code entry is completed: ${value}`} label={fbt()} />;
} }];
