crates/oxc_react_compiler/tests/snapshots/early-return.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/early-return.js
---
function MyApp(props) {
	if (props.cond) {
		return;
	}
}
export const FIXTURE_ENTRYPOINT = {
	fn: MyApp,
	params: ["TodoAdd"],
	isComponent: "TodoAdd"
};
