crates/oxc_react_compiler/tests/snapshots/error._todo.computed-lval-in-destructure.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/error._todo.computed-lval-in-destructure.js
---
Diagnostics:

OxcDiagnostic { inner: OxcDiagnosticInner { message: "[ReactCompiler] Invariant: [InferMutationAliasingEffects] Expected value kind to be initialized", labels: [LabeledSpan { label: Some("this is uninitialized"), span: Span { start: 111, end: 112 }, primary: false }], help: Some("<unknown> x$8"), note: None, severity: Error, code: OxcCode { scope: None, number: None }, url: None } }

No changes.
