crates/oxc_react_compiler/tests/snapshots/error.bailout-on-flow-suppression.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/error.bailout-on-flow-suppression.js
---
Diagnostics:

OxcDiagnostic { inner: OxcDiagnosticInner { message: "[ReactCompiler] Suppression: React Compiler has skipped optimizing this component because one or more React rule violations were reported by Flow", labels: [LabeledSpan { label: Some("Found React rule suppression"), span: Span { start: 52, end: 82 }, primary: false }], help: Some("React Compiler only works when your components follow all the rules of React, disabling them may result in unexpected or incorrect behavior. Found suppression `$FlowFixMe[react-rule-hook]`"), note: None, severity: Error, code: OxcCode { scope: None, number: None }, url: None } }

No changes.
